# Pygame-UI

./: .gitignore  main.py  pyproject.toml  run.py  setup.py
app/: README.md
app/PYGAME_GUI_EXT/: __init__.py
app/PYGAME_GUI_EXT.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
app/PYGAME_GUI_EXT/src/: testing.py
app/PYGAME_GUI_EXT/src/Component/: Elements.py
src/PYGAME_GUI_EXT/: Button.py  Container.py  Label.py  testing.py
src/PYGAME_GUI_EXT/Component/: Elements.py
