[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PYGAME_GUI_EXT"
version = "0.0.1"
authors = [
  { name="Yousef Abdelaziz", email="yousefdiv123@outlook.com" },
]
maintainers = [
  {name = "Yousef Abdelaziz", email = "yousefdiv123@outlook.com"}
]
keywords = ["pygame", "UI", "GUI"]
dependencies = [
  "pygame==2.1.2"
]
description = "a GUI extension for pygame"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Yousef-Div123/Pygame-UI"
Issues = "https://github.com/Yousef-Div123/Pygame-UI/issues"